--- a/Projeto-health-care/index.html
+++ b/Projeto-health-care/index.html
@@ -13,15 +13,16 @@
 <body>
     <div class="home-background">
         <form class="home__form">
+            <img src="./img/logo-site.png" alt="logo-hc" class="home__logo">
             <input type="text" placeholder="Login" name="uname"  class="home__input" required>
             <input type="password" placeholder="Senha" name="psw" class="home__input" required>
-            <button type="submit">Entrar</button>
-            <label>
+            <button type="submit" class="home__button">Entrar</button>
+            <label class="home__text">
                 <input type="checkbox" checked="checked" name="remember"> Lembrar senha
             </label>
 
             <div>
-                <span>Não tem cadastro ainda? <a href="#">Clique aqui</a> para cadastrar</span>
+                <span class="home__text">Não possui cadastro? <a href="#">Clique aqui</a> para cadastrar.</span>
             </div>
         </form>
 
