--- a/Projeto-health-care/index.html
+++ b/Projeto-health-care/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Health Care | Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -22,7 +22,7 @@
             </label>
 
             <div>
-                <span class="home__text">Não possui cadastro? <a href="#">Clique aqui</a> para cadastrar.</span>
+                <span class="home__text">Não possui cadastro? <a href="./pages/cadastro/cadastro.html">Clique aqui</a> para cadastrar.</span>
             </div>
         </form>
 
