html e css da pagina do paciente

--- a/Projeto-health-care/index.html
+++ b/Projeto-health-care/index.html
@@ -16,7 +16,7 @@
             <img src="./img/logo-site.png" alt="logo-hc" class="home__logo">
             <input type="text" placeholder="Login" name="uname"  class="home__input" required>
             <input type="password" placeholder="Senha" name="psw" class="home__input" required>
-            <button type="submit" class="home__button">Entrar</button>
+            <button type="submit" class="button-purple">Entrar</button>
             <label class="home__text">
                 <input type="checkbox" checked="checked" name="remember"> Lembrar senha
             </label>
