--- a/Projeto-health-care/pages/cadastro/cadastro.html
+++ b/Projeto-health-care/pages/cadastro/cadastro.html
@@ -18,7 +18,7 @@
             <input type="text" placeholder="E-mail" name="uemail" class="home__input" required>
             <input type="password" placeholder="Senha" name="psw" class="home__input" required>
             <input type="password" placeholder="Confirmar senha" name="psw" class="home__input" required>
-            <button type="submit" class="home__button">Cadastrar</button>
+            <button type="submit" class="button-purple">Cadastrar</button>
 
             <div>
                 <span class="home__text">Já é cadastrado? <a href="../../index.html">Clique aqui</a>
