ajustes de responsividade da tabela

--- a/Projeto-health-care/pages/pagina-paciente/pagina-paciente.html
+++ b/Projeto-health-care/pages/pagina-paciente/pagina-paciente.html
@@ -28,7 +28,8 @@
 
     <main class="pag-main">
         <form class="pag__form">
-            <input type="date" data-date="" data-date-format="DD MMMM YYYY" value="2019-04-30" class="input-data pag__input" id="inputdata">
+            <input type="date" data-date="" data-date-format="DD MMMM YYYY" value="2019-04-30" class="input-data pag__input"
+                id="inputdata">
             <textarea type="text" placeholder="Diário alimentar" name="alimentacao" class="pag__input pag__textarea"
                 required></textarea>
             <input type="text" placeholder="Medicação" name="medicacao" class="pag__input" required>
@@ -38,21 +39,38 @@
         </form>
 
         <section class="pag__paciente--data container">
-            <table class="pag__pacient--table">
-                <tr>
-                    <th>Data</th>
-                    <th>Alimentação</th>
-                    <th>Medicação</th>
-                    <th>Fisioterapia/Exercícios</th>
-                </tr>
-                <tr class="pag__pacient--data">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td class="pag__pacient--button btn-edit"><button><img src="../../img/icone-editar.png" alt="editar"> </button></td>
-                    <td class="pag__pacient--button btn-delete"><button><img src="../../img/icone-deletar.png" alt="deletar"> </button></td>
-                </tr>
+            <table class="pag__pacient--table table-responsive">
+                <thead>
+                    <tr>
+                        <th>Data</th>
+                        <th>Alimentação</th>
+                        <th>Medicação</th>
+                        <th>Fisioterapia</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="pag__pacient--data">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td class="pag__pacient--button btn-edit"><button><img src="../../img/icone-editar.png" alt="editar">
+                            </button></td>
+                        <td class="pag__pacient--button btn-delete"><button><img src="../../img/icone-deletar.png" alt="deletar">
+                            </button></td>
+                    </tr>
+                    <tr class="pag__pacient--data">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td class="pag__pacient--button btn-edit"><button><img src="../../img/icone-editar.png" alt="editar">
+                                </button></td>
+                            <td class="pag__pacient--button btn-delete"><button><img src="../../img/icone-deletar.png" alt="deletar">
+                                </button></td>
+                        </tr>
+                    
+                </tbody>
             </table>
         </section>
     </main>
@@ -60,10 +78,8 @@
     <footer>
         <p>Copyright &copy; 2019. Developed by <a href="https://github.com/gabrieladaltoe">Gabriela Dal Toé Fortuna</a></p>
     </footer>
-    <script
-    src="https://code.jquery.com/jquery-3.4.0.min.js"
-    integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
     <script type="text/javascript" src="../../script.js"></script>
 </body>
